--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -440,7 +440,7 @@
    "id": "af6203d8-ca56-4cc1-900f-0d41fddfd479",
    "metadata": {},
    "source": [
-    "#### DBSCAN Summary:"
+    "#### CART Summary:"
    ]
   },
   {
@@ -977,19 +977,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
+   "id": "aabba0d2-4553-4fe0-b8c9-ee8ab86cd870",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_train = train[train.columns[(train.dtypes != 'object') & (train.columns != 'id')]]\n",
+    "model_validate = validate[validate.columns[(validate.dtypes != 'object') & (validate.columns != 'id')]]\n",
+    "model_test = train[test.columns[(test.dtypes != 'object') & (test.columns != 'id')]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "241947e9-1582-423d-a35d-3bd181ad4c20",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "#train.retained.value_counts()"
+    "# model_train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "id": "0df1642b-e3a3-4619-b6a5-6904bd8c8097",
    "metadata": {
     "tags": []
@@ -1019,13 +1031,13 @@
     "\n",
     "# Here we create and fit the model\n",
     "dummy = DummyClassifier(strategy='most_frequent', random_state = 1729, constant = None)\n",
-    "dummy.fit(train[train.columns[train.columns != 'retained']], train.retained)   \n",
+    "dummy.fit(model_train[model_train.columns[model_train.columns != 'retained']], model_train.retained)   \n",
     "\n",
     "# Here we create our predictions\n",
-    "y_pred = dummy.predict(train[train.columns[train.columns != 'retained']])\n",
+    "y_pred = dummy.predict(model_train[model_train.columns[model_train.columns != 'retained']])\n",
     "\n",
     "# Check report for current baseline accuracy: 0.73\n",
-    "print(classification_report(train.retained, y_pred))"
+    "print(classification_report(model_train.retained, y_pred))"
    ]
   },
   {
@@ -1078,19 +1090,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "id": "38d89631-2700-4e4c-94e0-75af77e318e7",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "#train[train.columns[train.dtypes != 'object']].head()"
+    "# train[train.columns[train.dtypes != 'object']].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "id": "23746f93-466a-4d24-8fab-875f5b7f718b",
    "metadata": {
     "tags": []
@@ -1117,7 +1129,7 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "# Split the data\n",
-    "x_train_dt, y_train_dt = wrangle.model_split(train[train.columns[train.dtypes != 'object']], 'retained')\n",
+    "x_train_dt, y_train_dt = wrangle.model_split(model_train, 'retained')\n",
     "\n",
     "# Create the model\n",
     "dtc = DecisionTreeClassifier(max_depth=4, random_state=1729)\n",
@@ -1134,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "id": "953cfe00-59bc-4cef-9ecb-d50e71d0d3a6",
    "metadata": {
     "tags": []
@@ -1182,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "id": "27caf08b-410c-4c74-9ba0-b4452e0229a5",
    "metadata": {
     "tags": []
@@ -1194,18 +1206,18 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.86      0.33      0.48     80251\n",
-      "           1       0.76      0.97      0.85    170676\n",
+      "           0       0.88      0.28      0.42     80251\n",
+      "           1       0.74      0.98      0.85    170676\n",
       "\n",
-      "    accuracy                           0.77    250927\n",
-      "   macro avg       0.81      0.65      0.66    250927\n",
-      "weighted avg       0.79      0.77      0.73    250927\n",
+      "    accuracy                           0.76    250927\n",
+      "   macro avg       0.81      0.63      0.63    250927\n",
+      "weighted avg       0.79      0.76      0.71    250927\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "x_train_rf, y_train_rf = wrangle.model_split(train[train.columns[train.dtypes != 'object']], 'retained')\n",
+    "x_train_rf, y_train_rf = wrangle.model_split(model_train, 'retained')\n",
     "rf = RandomForestClassifier(min_samples_leaf=3,\n",
     "                            max_depth=3, \n",
     "                            random_state=1729)\n",
@@ -1235,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "id": "7c9e7aa8-cb65-4868-81a1-eb01aec98aff",
    "metadata": {
     "tags": []
@@ -1247,9 +1259,9 @@
     "# from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "# # split the data\n",
-    "# x_train, y_train, = wrangle.model_split(train[train.columns[train.dtypes != 'object']], 'retained')\n",
-    "# x_validate, y_validate, = wrangle.model_split(validate[validate.columns[validate.dtypes != 'object']], 'retained')\n",
-    "# x_test, y_test, = wrangle.model_split(test[test.columns[test.dtypes != 'object']], 'retained')\n",
+    "# x_train, y_train, = wrangle.model_split(model_train, 'retained')\n",
+    "# x_validate, y_validate, = wrangle.model_split(model_validate, 'retained')\n",
+    "# x_test, y_test, = wrangle.model_split(model_test, 'retained')\n",
     "\n",
     "# stan_scal = StandardScaler()\n",
     "# x_train = stan_scal.fit_transform(x_train)\n",
@@ -1274,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "id": "f8f84bc2-36ad-4b89-9461-ec842495345f",
    "metadata": {
     "tags": []
@@ -1286,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "id": "39f1371f-0b60-467a-b3ce-08569b172993",
    "metadata": {
     "tags": []
@@ -1326,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "id": "f166ff10-f3b0-43f3-ab83-d8f7da905ba0",
    "metadata": {
     "tags": []
@@ -1338,12 +1350,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.70      0.02      0.03     80251\n",
-      "           1       0.68      1.00      0.81    170676\n",
+      "           0       0.77      0.56      0.65     80251\n",
+      "           1       0.82      0.92      0.87    170676\n",
       "\n",
-      "    accuracy                           0.68    250927\n",
-      "   macro avg       0.69      0.51      0.42    250927\n",
-      "weighted avg       0.69      0.68      0.56    250927\n",
+      "    accuracy                           0.81    250927\n",
+      "   macro avg       0.79      0.74      0.76    250927\n",
+      "weighted avg       0.80      0.81      0.80    250927\n",
       "\n"
      ]
     }
@@ -1353,7 +1365,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "# Split the data\n",
-    "x_train_lr, y_train_lr = wrangle.model_split(train[train.columns[train.dtypes != 'object']], 'retained')\n",
+    "x_train_lr, y_train_lr = wrangle.model_split(model_train, 'retained')\n",
     "\n",
     "# Create the model\n",
     "logit = LogisticRegression(C=10, random_state=1729)\n",
@@ -1455,7 +1467,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
+   "id": "df7817a5-85b1-44c5-a7ff-8b242a5a433c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "id": "f485430e-2646-40c1-beb3-1c571a41f682",
    "metadata": {
     "tags": []
@@ -1479,7 +1499,7 @@
    ],
    "source": [
     "# Validate Decision Tree\n",
-    "x_validate_dt, y_validate_dt = wrangle.model_split(validate[validate.columns[validate.dtypes != 'object']], 'retained')\n",
+    "x_validate_dt, y_validate_dt = wrangle.model_split(model_validate, 'retained')\n",
     "y_pred_val_dt = dtc.predict(x_validate_dt)\n",
     "\n",
     "print(classification_report(y_validate_dt, y_pred_val_dt))"
@@ -1487,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "id": "b552aa77-b2d3-4cb1-8fed-0fd2e06f3835",
    "metadata": {
     "tags": []
@@ -1499,19 +1519,19 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.86      0.33      0.48     34394\n",
-      "           1       0.76      0.97      0.85     73147\n",
+      "           0       0.88      0.28      0.42     34394\n",
+      "           1       0.74      0.98      0.85     73147\n",
       "\n",
-      "    accuracy                           0.77    107541\n",
-      "   macro avg       0.81      0.65      0.66    107541\n",
-      "weighted avg       0.79      0.77      0.73    107541\n",
+      "    accuracy                           0.76    107541\n",
+      "   macro avg       0.81      0.63      0.63    107541\n",
+      "weighted avg       0.79      0.76      0.71    107541\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Validate Random Forest \n",
-    "x_validate_rf, y_validate_rf = wrangle.model_split(validate[validate.columns[validate.dtypes != 'object']], 'retained')\n",
+    "x_validate_rf, y_validate_rf = wrangle.model_split(model_validate, 'retained')\n",
     "y_pred_val_rf = rf.predict(x_validate_rf)\n",
     "\n",
     "print(classification_report(y_validate_rf, y_pred_val_rf))"
@@ -1519,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 54,
    "id": "30bee4cf-915b-4fbc-8b48-b187407fb82c",
    "metadata": {
     "tags": []
@@ -1527,7 +1547,7 @@
    "outputs": [],
    "source": [
     "# # Validate KNN\n",
-    "# x_validate_knn, y_validate_knn = wrangle.model_split(validate[validate.columns[validate.dtypes != 'object']], 'retained')\n",
+    "# x_validate_knn, y_validate_knn = wrangle.model_split(model_validate, 'retained')\n",
     "# y_pred_val_knn = knn.predict(x_validate_knn)\n",
     "\n",
     "# print(classification_report(y_validate_knn, y_pred_val_knn))"
@@ -1535,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "id": "ef846933-f2a5-4979-b2a5-0de74cedf68a",
    "metadata": {
     "tags": []
@@ -1547,19 +1567,19 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.69      0.02      0.03     34394\n",
-      "           1       0.68      1.00      0.81     73147\n",
+      "           0       0.77      0.56      0.65     34394\n",
+      "           1       0.82      0.92      0.87     73147\n",
       "\n",
-      "    accuracy                           0.68    107541\n",
-      "   macro avg       0.69      0.51      0.42    107541\n",
-      "weighted avg       0.68      0.68      0.56    107541\n",
+      "    accuracy                           0.81    107541\n",
+      "   macro avg       0.79      0.74      0.76    107541\n",
+      "weighted avg       0.80      0.81      0.80    107541\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# # Validate Logistic Regression\n",
-    "x_validate_lr, y_validate_lr = wrangle.model_split(validate[validate.columns[validate.dtypes != 'object']], 'retained')\n",
+    "x_validate_lr, y_validate_lr = wrangle.model_split(model_validate, 'retained')\n",
     "y_pred_val_lr = logit.predict(x_validate_lr)\n",
     "\n",
     "print(classification_report(y_validate_lr, y_pred_val_lr))"
@@ -1585,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "id": "0a6c7151-82aa-4a5f-9142-274423319207",
    "metadata": {
     "tags": []
@@ -1597,19 +1617,19 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.81      0.53      0.64     28661\n",
-      "           1       0.81      0.94      0.87     60957\n",
+      "           0       0.81      0.52      0.63     34394\n",
+      "           1       0.81      0.94      0.87     73147\n",
       "\n",
-      "    accuracy                           0.81     89618\n",
-      "   macro avg       0.81      0.73      0.75     89618\n",
-      "weighted avg       0.81      0.81      0.80     89618\n",
+      "    accuracy                           0.81    107541\n",
+      "   macro avg       0.81      0.73      0.75    107541\n",
+      "weighted avg       0.81      0.81      0.79    107541\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Test on Decision Tree\n",
-    "x_test_dt, y_test_dt, = wrangle.model_split(test[test.columns[test.dtypes != 'object']], 'retained')\n",
+    "x_test_dt, y_test_dt, = wrangle.model_split(model_validate, 'retained')\n",
     "y_pred_test_dt = dtc.predict(x_test_dt)\n",
     "\n",
     "print(classification_report(y_test_dt, y_pred_test_dt))"
