--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -270,7 +270,7 @@
     "# # Change column names for ease of use\n",
     "# students = students.rename(columns={'fakeid':'id','enrolled_1_back':'enrolled_between','student_classif':'student_year',\\\n",
     "#                                     'originaltype':'enroll_type','cip_2dig':'cip','astd':'academic_standing',\\\n",
-    "#                                     'dubya_count_term':'w_count','span':'yrs_since_start','days_between':'reg_before_start'})"
+    "#                                     'dubya_count_term':'withdrawal','span':'yrs_since_start','days_between':'reg_before_start'})"
    ]
   },
   {
@@ -322,7 +322,7 @@
    },
    "outputs": [],
    "source": [
-    "# students.w_count.value_counts()"
+    "# students.withdrawal.value_counts()"
    ]
   },
   {
@@ -335,7 +335,7 @@
    "outputs": [],
    "source": [
     "# # One hot encode categorical columns\n",
-    "# # Replace (1,0): retained, enrolled_between, sex, time_status, pell_ever, academic_standing, fa_recd, w_count\n",
+    "# # Replace (1,0): retained, enrolled_between, sex, time_status, pell_ever, academic_standing, fa_recd, withdrawal\n",
     "# students['retained'] = students.retained.str.replace('Y', '1').str.replace('N', '0')\n",
     "# students['enrolled_between'] = students.enrolled_between.str.replace('Y', '1').str.replace('N', '0')\n",
     "# students['sex'] = students.sex.str.replace('F', '1').str.replace('M', '0')\n",
@@ -343,10 +343,10 @@
     "# students['pell_ever'] = students.pell_ever.str.replace('Y', '1').str.replace('N', '0')\n",
     "# students['academic_standing'] = students.academic_standing.str.replace('GOODBIN', '1').str.replace('ISSUEBIN', '0')\n",
     "# students['fa_recd'] = students.fa_recd.str.replace('Y', '1').str.replace('N', '0')\n",
-    "# students['w_count'] = students.w_count.str.replace('ONE_OR_MORE', '1').str.replace('NONE', '0')\n",
+    "# students['withdrawal'] = students.withdrawal.str.replace('ONE_OR_MORE', '1').str.replace('NONE', '0')\n",
     "# # Reassign as int type\n",
-    "# students[['retained','enrolled_between','sex','time_status','pell_ever','academic_standing','fa_recd','w_count']] = \\\n",
-    "# students[['retained','enrolled_between','sex','time_status','pell_ever','academic_standing','fa_recd','w_count']].astype('int')\n",
+    "# students[['retained','enrolled_between','sex','time_status','pell_ever','academic_standing','fa_recd','withdrawal']] = \\\n",
+    "# students[['retained','enrolled_between','sex','time_status','pell_ever','academic_standing','fa_recd','withdrawal']].astype('int')\n",
     "# # Create dummies: race_ethn, fgen, student_year, enroll_type, cip, age_at_start_term, act, depend_status, yrs_since_start\n",
     "# dummy_name = pd.get_dummies(students[['race_ethn','fgen','student_year','enroll_type','title','age_at_start_term','act','depend_status','yrs_since_start']],dummy_na=False)\n",
     "# # Combine df's\n",
@@ -372,7 +372,7 @@
     "#     # Change column names for ease of use\n",
     "#     df = df.rename(columns={'fakeid':'id','enrolled_1_back':'enrolled_between','student_classif':'student_year',\\\n",
     "#                                     'originaltype':'enroll_type','cip_2dig':'cip','astd':'academic_standing',\\\n",
-    "#                                     'dubya_count_term':'w_count','span':'yrs_since_start','days_between':'reg_before_start'})\n",
+    "#                                     'dubya_count_term':'withdrawal','span':'yrs_since_start','days_between':'reg_before_start'})\n",
     "#     # Drop Nulls for initial pass\n",
     "#     df = df.dropna()\n",
     "    \n",
@@ -387,7 +387,7 @@
     "#     df['age_at_start_term'] = df.age_at_start_term.str.replace(' ','')\n",
     "    \n",
     "#     # One hot encode categorical columns\n",
-    "#     # Replace (1,0): retained, enrolled_between, sex, time_status, pell_ever, academic_standing, fa_recd, w_count\n",
+    "#     # Replace (1,0): retained, enrolled_between, sex, time_status, pell_ever, academic_standing, fa_recd, withdrawal\n",
     "#     df['retained'] = df.retained.str.replace('Y', '1').str.replace('N', '0')\n",
     "#     df['enrolled_between'] = df.enrolled_between.str.replace('Y', '1').str.replace('N', '0')\n",
     "#     df['sex'] = df.sex.str.replace('F', '1').str.replace('M', '0')\n",
@@ -395,11 +395,11 @@
     "#     df['pell_ever'] = df.pell_ever.str.replace('Y', '1').str.replace('N', '0')\n",
     "#     df['academic_standing'] = df.academic_standing.str.replace('GOODBIN', '1').str.replace('ISSUEBIN', '0')\n",
     "#     df['fa_recd'] = df.fa_recd.str.replace('Y', '1').str.replace('N', '0')\n",
-    "#     df['w_count'] = df.w_count.str.replace('ONE_OR_MORE', '1').str.replace('NONE', '0')\n",
+    "#     df['withdrawal'] = df.withdrawal.str.replace('ONE_OR_MORE', '1').str.replace('NONE', '0')\n",
     "\n",
     "#     # Reassign as int type\n",
-    "#     df[['retained','enrolled_between','sex','time_status','pell_ever','academic_standing','fa_recd','w_count']] = \\\n",
-    "#     df[['retained','enrolled_between','sex','time_status','pell_ever','academic_standing','fa_recd','w_count']].astype('int')\n",
+    "#     df[['retained','enrolled_between','sex','time_status','pell_ever','academic_standing','fa_recd','withdrawal']] = \\\n",
+    "#     df[['retained','enrolled_between','sex','time_status','pell_ever','academic_standing','fa_recd','withdrawal']].astype('int')\n",
     "     \n",
     "#     # Create dummies: race_ethn, fgen, student_year, enroll_type, cip, age_at_start_term, act, depend_status, yrs_since_start\n",
     "#     dummy_name = pd.get_dummies(df[['race_ethn','fgen','student_year','enroll_type','title','age_at_start_term','act','depend_status','yrs_since_start']],dummy_na=False)\n",
